[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scripts/ship.gd" type="Script" id=2]
[ext_resource path="res://Assets/sprites/Ship-sheet.png" type="Texture" id=3]
[ext_resource path="res://scripts/alien_group.gd" type="Script" id=4]
[ext_resource path="res://cenas/inimigo.tscn" type="PackedScene" id=5]
[ext_resource path="res://cenas/shield.tscn" type="PackedScene" id=6]
[ext_resource path="res://fontes/system.fnt" type="BitmapFont" id=7]
[ext_resource path="res://scripts/life_draw.gd" type="Script" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -8, 4, -8, -1, 0, -4, 8, -1, 8, 4, -8, 4 )

[sub_resource type="Animation" id=2]

resource/name = "explode"
length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 1, 2, 1, 2, 1, 2, 1, 2 ] }

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="ship" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 90, 262 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/mask = 0
script/script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="ship"]

texture = ExtResource( 3 )
hframes = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ship"]

build_mode = 0
polygon = Vector2Array( -8, 4, 8, 4, 8, -1, 0, -4, -8, -1, -8, 4 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="ship"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explode = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Alien_group" type="Node2D" parent="."]

script/script = ExtResource( 4 )

[node name="aliens" type="Area2D" parent="Alien_group"]

editor/display_folded = true
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="inimigo" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 20, 30 )
tipo = 2

[node name="inimigo1" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 40, 30 )
tipo = 2

[node name="inimigo2" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 60, 30 )
tipo = 2

[node name="inimigo3" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 80, 30 )
tipo = 2

[node name="inimigo4" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 100, 30 )
tipo = 2

[node name="inimigo5" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 120, 30 )
tipo = 2

[node name="inimigo6" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 140, 30 )
tipo = 2

[node name="inimigo7" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 160, 30 )
tipo = 2

[node name="inimigo8" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 20, 50 )

[node name="inimigo9" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 40, 50 )

[node name="inimigo10" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 60, 50 )

[node name="inimigo11" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 80, 50 )

[node name="inimigo12" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 100, 50 )

[node name="inimigo13" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 120, 50 )

[node name="inimigo14" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 140, 50 )

[node name="inimigo15" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 160, 50 )

[node name="inimigo16" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 20, 70 )
tipo = 1

[node name="inimigo17" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 40, 70 )
tipo = 1

[node name="inimigo18" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 60, 70 )
tipo = 1

[node name="inimigo19" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 80, 70 )
tipo = 1

[node name="inimigo20" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 100, 70 )
tipo = 1

[node name="inimigo21" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 120, 70 )
tipo = 1

[node name="inimigo22" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 140, 70 )
tipo = 1

[node name="inimigo23" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 160, 70 )
tipo = 1

[node name="inimigo24" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 20, 90 )
tipo = 1

[node name="inimigo25" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 40, 90 )
tipo = 1

[node name="inimigo26" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 60, 90 )
tipo = 1

[node name="inimigo27" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 80, 90 )
tipo = 1

[node name="inimigo28" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 100, 90 )
tipo = 1

[node name="inimigo29" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 120, 90 )
tipo = 1

[node name="inimigo30" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 140, 90 )
tipo = 1

[node name="inimigo31" parent="Alien_group/aliens" instance=ExtResource( 5 )]

transform/pos = Vector2( 160, 90 )
tipo = 1

[node name="timer_shot" type="Timer" parent="Alien_group"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="timer_move" type="Timer" parent="Alien_group"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="timer_mother_ship" type="Timer" parent="Alien_group"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="timer_pause" type="Timer" parent="Alien_group"]

process_mode = 1
wait_time = 0.02
one_shot = true
autostart = false

[node name="shields" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 104, 234 )

[node name="shield" parent="shields" instance=ExtResource( 6 )]

transform/pos = Vector2( -63, 0 )

[node name="shield1" parent="shields" instance=ExtResource( 6 )]

transform/pos = Vector2( -32, 0 )

[node name="shield2" parent="shields" instance=ExtResource( 6 )]

[node name="shield3" parent="shields" instance=ExtResource( 6 )]

transform/pos = Vector2( 31, 0 )

[node name="HUD" type="Node" parent="."]

editor/display_folded = true

[node name="score" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 175.0
margin/bottom = 19.0
custom_fonts/font = ExtResource( 7 )
text = "99999"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="life_draw" type="Node2D" parent="HUD"]

transform/pos = Vector2( 1.55609, 3.11217 )
script/script = ExtResource( 8 )
textura = ExtResource( 3 )
lifes = 3

[connection signal="timeout" from="Alien_group/timer_shot" to="Alien_group" method="_on_Timer_shot_timeout"]

[connection signal="timeout" from="Alien_group/timer_move" to="Alien_group" method="_on_timer_move_timeout"]

[connection signal="timeout" from="Alien_group/timer_mother_ship" to="Alien_group" method="_on_timer_mother_ship_timeout"]


